Fixed selects text alignment in Firefox

--- a/src/styles/css/base.css
+++ b/src/styles/css/base.css
@@ -55,6 +55,7 @@
 		padding: 0 1rem;
 		width: 100%;
 		min-height: 3rem;
+		line-height: 3rem;
 		color: var(--foreground);
 	}
 
